# progressive-android-experiments

./: .gitignore  .gitmodules  AUTHORS.md  CHANGES.md  README.md  build.gradle  gradle.properties
.github/workflows/: build.yml  gradle-wrapper-validation.yml  quality.yml
docs/: cpp_agent_executor.md  cpp_event_cache.md  cpp_hash_utils.md  cpp_markdown_renderer.md  cpp_notif_priority.md  cpp_rainbow_generator.md  cpp_room_permissions.md  cpp_slash_commands_reference.md  cpp_sync_analyzer.md
progressive/: build.gradle
progressive-app/: build.gradle
progressive-app/src/androidTest/java/chat/progressive/app/: ClearCurrentSessionRule.kt
progressive-app/src/fdroid/java/chat/progressive/app/di/: FlavorModule.kt
progressive-app/src/fdroid/java/chat/progressive/app/fdroid/: BackgroundSyncStarter.kt
progressive-app/src/gplay/java/chat/progressive/app/di/: FlavorModule.kt
progressive-app/src/gplay/java/chat/progressive/app/nightly/: FirebaseNightlyProxy.kt
progressive-app/src/main/java/chat/progressive/app/: ProgressiveApplication.kt
progressive/src/main/: AndroidManifest.xml
progressive/src/main/cpp/: CMakeLists.txt
progressive/src/main/cpp/include/progressive/: account_data_utils.hpp  admin_utils.hpp  avatar_fallback_utils.hpp  avatar_url_utils.hpp  avatar_utils.hpp  backup_keys_utils.hpp  backup_utils.hpp  call_event_formatter.hpp  capabilities_utils.hpp  contact_utils.hpp  content_scanner.hpp  content_warning_utils.hpp  cross_sign_utils.hpp  dehydrate_utils.hpp  device_naming_helper.hpp  device_rename_utils.hpp  device_trust.hpp  direct_message_utils.hpp  display_name_utils.hpp  draft_manager_utils.hpp  emoji_utils.hpp  event_age_utils.hpp  event_aggregation_utils.hpp  event_content_utils.hpp  event_display_formatter.hpp  event_filter_utils.hpp  event_forward_utils.hpp  event_hash_utils.hpp  event_highlight_utils.hpp  event_id_utils.hpp  event_origin_utils.hpp  event_receipt_utils.hpp  event_redaction.hpp  event_relations_utils.hpp  event_reminder.hpp  event_search.hpp  event_sender_utils.hpp  event_signature_utils.hpp  event_state_utils.hpp  event_utils.hpp  (+88 more)
progressive/src/main/cpp/src/: account_data_utils.cpp  account_deactivation_utils.cpp  account_utils.cpp  account_validator.cpp  admin_utils.cpp  alarm_engine.cpp  alias_manager.cpp  attachment_handler.cpp  audio_engine.cpp  avatar_color_gen.cpp  avatar_cropper.cpp  avatar_fallback_utils.cpp  avatar_picker.cpp  avatar_url_utils.cpp  avatar_utils.cpp  background_scheduler.cpp  backup_keys_utils.cpp  backup_restore_utils.cpp  backup_utils.cpp  backup_version_utils.cpp  bidirectional_utils.cpp  biometric_auth.cpp  cache_invalidator.cpp  call_duration.cpp  call_event_formatter.cpp  canonical_alias_util.cpp  capabilities_utils.cpp  common_utils.cpp  config_loader.cpp  contact_utils.cpp  content_builder.cpp  content_builder_utils.cpp  content_report_utils.cpp  content_scanner.cpp  content_warning_utils.cpp  crash_reporter.cpp  cross_sign_bootstrap.cpp  cross_sign_utils.cpp  cross_signing_status.cpp  crypto_device_utils.cpp  (+566 more)
progressive/src/main/java/chat/progressive/app/native/: ProgressiveNative.kt
progressive/src/main/res/layout/: activity_test_mode.xml
progressive/src/main/res/menu/: menu_new_home.xml
progressive/src/main/res/xml/: progressive_settings_security_privacy.xml
vector/: build.gradle
vector-app/: build.gradle
vector-app/src/fdroid/java/im/vector/app/fdroid/: package-info.kt
vector-app/src/main/res/values/: strings.xml
vector/src/main/: AndroidManifest.xml
vector/src/main/cpp/: CMakeLists.txt
vector/src/main/cpp/include/progressive/: account_data_utils.hpp  account_export.hpp  auth_models.hpp  backup_utils.hpp  call_manager.hpp  call_models.hpp  chat_tools.hpp  common_utils.hpp  content_guard.hpp  content_scanner.hpp  content_utils.hpp  crypto_models.hpp  decryptor_utils.hpp  desync_detector.hpp  device_manager.hpp  device_manager_full.hpp  draft_manager.hpp  encrypted_file.hpp  event_models.hpp  event_relations.hpp  event_relations_manager.hpp  event_utils.hpp  eventcache.hpp  graph_utils.hpp  hash_utils.hpp  http_client.hpp  identity_server_manager.hpp  identity_utils.hpp  input_tools.hpp  invitation_hide.hpp  key_backup.hpp  key_backup_manager.hpp  keyshare.hpp  llm.hpp  login_flow.hpp  login_utils.hpp  matrix_api.hpp  matrix_error.hpp  media_upload_manager.hpp  media_utils_extra.hpp  (+49 more)
vector/src/main/cpp/src/: account_data_utils.cpp  account_export.cpp  account_utils.cpp  agent_executor.cpp  audio_engine.cpp  auth_utils.cpp  avatar_history.cpp  backup_utils.cpp  cache_manager.cpp  call_manager.cpp  call_models.cpp  canonical_json.cpp  chat_preview.cpp  chat_tools.cpp  chunked_upload.cpp  client_info.cpp  color_utils.cpp  connection_monitor.cpp  content_filter.cpp  content_guard.cpp  content_scanner.cpp  content_utils.cpp  create_room.cpp  cross_signing.cpp  date_utils.cpp  debug_service.cpp  deleted_archive.cpp  desync_detector.cpp  device_manager.cpp  device_manager_full.cpp  device_naming.cpp  displayname_utils.cpp  draft_manager.cpp  e2ee_decoration.cpp  e2ee_utils.cpp  edit_history.cpp  emoji_analyzer.cpp  encrypted_file.cpp  event_classifier.cpp  event_display.cpp  (+156 more)
vector/src/main/cpp/tests/: test_progressive.cpp
vector/src/main/java/chat/progressive/app/native/: ProgressiveNative.kt
vector/src/main/java/im/vector/app/: ActiveSessionDataSource.kt  AutoRageShaker.kt  EmojiCompatFontProvider.kt  EmojiCompatWrapper.kt  SpaceStateHandler.kt  SpaceStateHandlerImpl.kt  UISIDetector.kt
vector/src/main/java/im/vector/app/features/: DefaultVectorOverrides.kt  MainActivity.kt  VectorFeatures.kt
vector/src/main/res/drawable/: ic_login_splash_scales.xml
vector/src/main/res/values/: dimens.xml  strings.xml
vector/src/main/res/xml/: vector_settings_advanced_settings.xml  vector_settings_general.xml  vector_settings_help_about.xml  vector_settings_labs.xml  vector_settings_notification_mentions_and_keywords.xml  vector_settings_notifications.xml  vector_settings_pin.xml  vector_settings_preferences.xml  vector_settings_security_privacy.xml  vector_settings_voice_video.xml
(+2080 files in other folders)
